# pg_agent

./: .gitignore  README.md  debug_sandbox.py  langgraph.json  llm_test.py  pipeline_graph.py  problem_statement_generator.py  pyproject.toml  requirements.txt  run_dockervalidator_example.py  run_solver_agent.py  solution_generator.py  test.py  test_case_generator.py  todes.md  topic_selector.py  topics.json
Shanjal_test/: -problem.md  final_results.json  generate_testcase_prompt.py  input.txt  langgraph.json  problem.md  problem_gen.py  problem_spec.py  prompt_generator.py  temp_solution.cpp
Shanjal_test/TEST_CASES/: 1.in  1.out  10.in  10.out  11.in  11.out  12.in  12.out  13.in  13.out  14.in  14.out  15.in  15.out  16.in  16.out  17.in  18.in  18.out  2.in  2.out  20.in  20.out  21.in  21.out  22.in  22.out  23.in  23.out  24.in  24.out  25.in  25.out  26.in  26.out  27.in  27.out  28.in  28.out  29.in  (+62 more)
Shanjal_test/qwen/: attempt_1.cpp  attempt_10.cpp  (+29 more)
Solution_Validator/: critique.py  graph_builder.py  main.py  run_tests.py  verdict.py
docs/: edge_case_suggester.md  setup_studio.md
examples/: sum_of_array.md
graphs/: edge_case_suggester.py
pg_agent/: __init__.py
prompts/: critique.txt  edge_case_generator.txt  parse_constraints.txt
repo_template/: README.md  Utility_README.md  problem_statement.md  test_generator.cpp  test_run.sh
sample_problem_structure/: requirements.json
studio/: README.md  langgraph.json  pipeline_graph.py  requirements.txt  solution_generator.py  test_case_generator.py
tests/: test_edge_case_suggester.py  test_smoke.py
(+152 files in other folders)
